# paradigmas

./: .env  .envexample  .gitignore  Makefile  README.md  docker-compose.yml  instructions.txt
fastapi-app/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
fastapi-app/alembic/: env.py
fastapi-app/alembic/versions/: 001_initial_create_cities.py
fastapi-app/app/: main.py
fastapi-app/app/api/: __init__.py  cities.py
fastapi-app/app/core/: config.py  logging.py
fastapi-app/app/db/: session.py
fastapi-app/app/middleware/: request_id.py
fastapi-app/app/models/: __init__.py  base.py  city.py
fastapi-app/app/schemas/: __init__.py  city.py
fastapi-app/data/: sample_cities.csv
fastapi-app/scripts/: dev_import.sh
geodb-kmeans/: .dockerignore  .env  .envexample  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
geodb-kmeans/docs/: CHECKLIST.md  COMPLIANCE.md
geodb-kmeans/src/: main.js
geodb-kmeans/src/api/: geodbClient.js  paging.js  rateLimit.js
geodb-kmeans/src/app/: actions.js  bootstrap.js  events.js  initialState.js  reducer.js  render.js  selectors.js  state.js
geodb-kmeans/src/kmeans/: distance.js  init.js  kmeans.js  kmeansParallel.js  kmeansSingle.js  math.js  normalize.js  schema.js
geodb-kmeans/src/ui/: clusterPlot.js  dom.js  styles.css  templates.js
geodb-kmeans/src/workers/: fetchWorker.js  kmeansWorker.js  radiusFetchWorker.js  sharedMemory.js  sharedPoints.js  workerPool.js
